# SessionStealer

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.bat  build.sh  cookies.json  vcpkg.json
dlls/chrome/: CMakeLists.txt  chrome.c  chrome_exports.c
dlls/chromium/: CMakeLists.txt  chromium.c  chromium_exports.c  fetch_cookies.c  load_cookies.c  util.c  websocket.c
dlls/discovery/: CMakeLists.txt  chrome.c  discovery.c  edge.c  firefox.c  utils.c
dlls/edge/: CMakeLists.txt  edge.c  edge_exports.c  fetch_cookies.c  load_cookies.c  websocket.c
dlls/firefox/: CMakeLists.txt  fetch_cookies.c  firefox.c  firefox_exports.c  load_cookies.c  utils.c
include/dlls/chrome/: chrome.h  chrome_exports.h  load_cookies.h
include/dlls/chromium/: chromium.h  chromium_exports.h  fetch_cookies.h  load_cookies.h  util.h  websocket.h
include/dlls/discovery/: chrome.h  discovery.h  edge.h  firefox.h  utils.h
include/dlls/edge/: edge.h  edge_exports.h  fetch_cookies.h  load_cookies.h  util.h  websocket.h
include/dlls/firefox/: fetch_cookies.h  firefox.h  firefox_exports.h  load_cookies.h  utils.h
include/sessionstealer/: cli_args.h  dll_loader.h  utils.h  version.h
include/shared/: cookie_utils.h  cookies.h  util.h
shared/: cookie_utils.c  cookies.c  util.c
src/: CMakeLists.txt  cli_args.c  dll_loader.c  main.c  utils.c
tests/: CMakeLists.txt
tests/chromium/: test_websocket.cpp
tools/: chromium_cdp.py
tools/chromium/: read_chrome_cookies.py  read_edge_cookies.py  set_chromium_cookies.py
